--- a/projects/os/boot/CMakeLists.txt
+++ b/projects/os/boot/CMakeLists.txt
@@ -14,5 +14,8 @@ add_custom_command(
     TARGET boot POST_BUILD
     COMMAND ${CMAKE_COMMAND} -E echo "Running post build scripts..."
     COMMAND ${CMAKE_COMMAND} -E make_directory ${CMAKE_BINARY_DIR}/../image/efi/boot
+# Copy the output to the test image directory
     COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:boot> ${CMAKE_BINARY_DIR}/../image/efi/boot
+# Copy the output to the root of the project so it gets noticed by the createdisk tool.
+#    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_FILE:boot> ${CMAKE_BINARY_DIR}/../
 )
