--- a/projects/libs/diskformats/CMakeLists.txt
+++ b/projects/libs/diskformats/CMakeLists.txt
@@ -5,4 +5,4 @@
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -m64 -nostdlib -ffreestanding")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CMAKE_C_FLAGS}")
 
-add_library(gpt gpt.c)
+add_library(diskformats gpt.c)
